kubernetes-attack-surfaces/different-attacking-scenarios/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  serviceAccountName: rbac-test
  containers:
  - image: nginx:alpine
    name: nginx
    resources: {}
  restartPolicy: Always
